@@ -1,4 +1,4 @@
-# last modified 2014-08-04 by J. Fox
+# last modified 2014-09-23 by J. Fox
 
 importFrom(MASS, cov.trob, rlm)
 importFrom(nnet, multinom)
@@ -152,6 +152,7 @@ S3method(Anova, merMod)
 S3method(Anova, multinom)
 S3method(Anova, mlm)
 S3method(Anova, polr)
+S3method(Anova, rlm)
 S3method(Anova, survreg)
 S3method(Anova, svyglm)
 S3method(avPlot, lm)
@@ -208,6 +209,7 @@ S3method(linearHypothesis, mer)
 S3method(linearHypothesis, merMod)
 S3method(linearHypothesis, mlm)
 S3method(linearHypothesis, polr)
+S3method(linearHypothesis, rlm)
 S3method(linearHypothesis, svyglm)
 S3method(linearHypothesis, nlsList)
 S3method(Manova, mlm)
