@@ -10,6 +10,7 @@
 %   2013-06-17 update for summary.Anova.mlm and print.summary.Anova.mlm. J. Fox
 %   2013-06-20 added Anova.merMod(). J. Fox
 %   2014-08-09: added vcov. argument to Anova.lm(). J. Fox
+%   2014-09-23: added Anova.rlm(). J. Fox
 %-------------------------------------------------------------------------------
 
 \name{Anova}
@@ -31,13 +32,16 @@
 \alias{print.summary.Anova.mlm}
 \alias{Anova.coxph}
 \alias{Anova.svyglm}
+\alias{Anova.rlm}
 \alias{Anova.default}
 \title{Anova Tables for Various Statistical Models}
 \description{
   Calculates type-II or type-III analysis-of-variance tables for
   model objects produced by \code{lm}, \code{glm}, \code{multinom} 
   (in the \pkg{nnet} package), \code{polr} (in the \pkg{MASS}
-  package), \code{coxph} (in the \pkg{survival} package), \code{lmer} in the \pkg{lme4} package,
+  package), \code{coxph} (in the \pkg{survival} package), 
+  \code{svyglm} (in the \pkg{survival} package), \code{rlm} (in the \pkg{MASS} package),
+  \code{lmer} in the \pkg{lme4} package,
   \code{lme} in the \pkg{nlme} package, and for any
   model with a linear predictor and asymptotically normal coefficients that
   responds to the \code{vcov} and \code{coef} functions.  For linear
@@ -98,6 +102,8 @@ Manova(mod, ...)
     test.statistic=c("Chisq", "F"), vcov.=vcov(mod), singular.ok, ...)
 		
 \method{Anova}{svyglm}(mod, ...)
+
+\method{Anova}{rlm}(mod, ...)
 	
 \method{Anova}{default}(mod, type=c("II","III", 2, 3), 
 	test.statistic=c("Chisq", "F"), vcov.=vcov(mod), 
@@ -106,7 +112,8 @@ Manova(mod, ...)
 
 \arguments{
   \item{mod}{\code{lm}, \code{aov}, \code{glm}, \code{multinom}, \code{polr}
-    \code{mlm}, \code{coxph}, \code{lme}, \code{mer}, \code{merMod}, \code{svyglm} or other suitable model object.}
+    \code{mlm}, \code{coxph}, \code{lme}, \code{mer}, \code{merMod}, \code{svyglm},
+    \code{rlm}, or other suitable model object.}
   \item{error}{for a linear model, an \code{lm} model object from which the
     error sum of squares and degrees of freedom are to be calculated. For 
     F-tests for a generalized linear model, a \code{glm} object from which the
